<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">An Nam Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_search">Enter name,SKU code,Serial/IMEI</string>
    <string name="customer_infor">Customer ID,name,phone number</string>
    <string name="none">None</string>
    <string name="split_row">Split row</string>
    <string name="not_select">Not yet selected item</string>
    <string name="ship_infor">Shipping information</string>
    <string name="receiver">Receiver</string>
    <string name="tel">Tel</string>
    <string name="sale">Sale</string>
    <string name="shipping_book">Shipping book</string>
    <string name="list_of_bill">Oder</string>
    <string name="support">Support: 0368894608</string>
    <string name="all">Total </string>
    <string name="receivable">Receivable</string>
    <string name="get_payment">Oder</string>
    <string name="buy_more">Buy more</string>
    <string name="privacy_policy">Privacty policy</string>
    <string name="sign_up">Sign up</string>
    <string name="login_in_with_touch_id">Login with touch id</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="ominichannelplatform">O m n i c h a n n e l P a t f o r m</string>
    <string name="for_sale">For sale</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="sign_up_account">Sign up</string>
    <string name="list_of_bills">List of bills</string>
    <string name="total">Total</string>
    <string name="phone_number">Tel</string>
    <string name="touch_to_enter">Touch to enter</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="touch_to_select">Touch to select</string>
    <string name="ward">Ward,Commune</string>
    <string name="ship_paid_by_cust">Ship paid by cust.</string>
    <string name="deposit_method">Deposit method</string>
    <string name="transfer">Transfer</string>
    <string name="sale_channel">Sale channel</string>
    <string name="collect_COD">Collect COD</string>
    <string name="organization">Organization</string>
    <string name="personal">Personal</string>
    <string name="shipping_partner">Shipping partner</string>
    <string name="service_type">Service type</string>
    <string name="shipping_cost_paid_to_partner">Shipping cost paid to partner</string>
    <string name="tracking_no">Tracking No.</string>
    <string name="notes">Notes</string>
    <string name="shipping_date">Shipping date</string>
    <string name="weight">Weight(g)</string>
    <string name="size">Size(cm)</string>
    <string name="deposit">Deposit</string>
    <string name="shipping">Ship</string>
    <string name="packag">Package</string>
    <string name="save">Save</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="color">COLOR</string>
    <string name="clear_filter">Clear filter</string>
    <string name="done">Done</string>
    <string name="size_filter">SIZE</string>
    <string name="message_quantity">Quantity cannot be less than 0.Please check again</string>
    <string name="login_account">Account/password cannot be blank!</string>
    <string name="connect_error">No network connection!</string>
    <string name="available_item"><![CDATA[available items(QTY>0)]]></string>
    <string-array name="spnDay">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Before yesterday</item>
        <item>This week</item>
        <item>Other</item>
    </string-array>
    <string-array name="spnPayment">
        <item>All</item>
        <item>Got payment</item>
        <item>Debit</item>
        <item>Deleted</item>
    </string-array>
    <string-array name="color">
        <item>All</item>
        <item>blue</item>
        <item>while</item>
        <item>black</item>
        <item>green</item>
        <item>orange</item>
    </string-array>
    <string-array name="size">
        <item>All</item>
        <item>L</item>
        <item>XL</item>
        <item>M</item>
        <item>XXL</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ok">Đồng ý</string>
    <string name="cancel">Hủy</string>
    <string name="confirm_delete">Xác nhận xóa</string>
    <string name="add_new_address">Thêm địa chỉ mới</string>
    <string name="cart">Giỏ hàng</string>
    <string name="address_receive">Địa chỉ giao hàng</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="log_out">Đăng xuất</string>
    <string name="order">Đặt hàng</string>
    <string name="status">Trạng thái :</string>
    <string name="all_order">Tổng tiền :</string>
    <string name="note">Ghi chú : </string>
</resources>