<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginHorizontal="@dimen/d25"
        android:id="@+id/rlLogoMisa"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_250"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="@dimen/d100"
            android:id="@+id/imgLogoMisa"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFormSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlLogoMisa"
        android:layout_marginTop="@dimen/d50"
        android:layout_marginHorizontal="@dimen/d25"
        android:background="@drawable/custom_background_login"
        android:orientation="vertical"
        android:paddingVertical="@dimen/de10"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/violet_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/username"
                android:textColorHint="@color/violet_dark"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
            app:startIconTint="@color/violet_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/de10"
                android:layout_weight="2"
                android:hint="@string/password"
                android:textColorHint="@color/violet_dark"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_weight="2"
            android:background="@drawable/login_button_background"
            android:padding="@dimen/de10"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Bạn chưa có tài khoản ?"
                android:layout_marginTop="@dimen/de10"
                android:layout_marginBottom="@dimen/d5"
                android:textSize="@dimen/ts16"
                android:gravity="right"
                />
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="@dimen/d5"
                android:textSize="@dimen/ts16"
                android:textColor="@color/violet_dark"
                android:layout_marginTop="@dimen/de10"
                android:text="@string/sign_up" />
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llFormSignIn"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_in_with_touch_id"
                android:textColor="@color/white"
                android:textSize="@dimen/d15"
                tools:ignore="SpUsage" />

            <ImageButton
                android:layout_width="@dimen/d50"
                android:layout_height="@dimen/d50"
                android:layout_marginStart="@dimen/de10"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_fingerprint_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvPrivacyPolicy"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="@dimen/d45"
                android:layout_height="@dimen/d45"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_uk_flag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/de10"
                android:text="English"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginVertical="@dimen/de10"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone" />

    </RelativeLayout>
    <FrameLayout
        android:id="@+id/flProgessBarSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/color_gray"
        android:layout_alignParentBottom="true"
        android:visibility="gone">
        <ProgressBar
            android:progressDrawable="@drawable/ic_uploading"
            android:layout_gravity="center"
            android:layout_width="@dimen/d50"
            android:layout_height="@dimen/d50">
        </ProgressBar>
    </FrameLayout>
</RelativeLayout>