<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/d25"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogoMisa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d100"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/d50"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llSignUpForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlLogo"
        android:layout_marginHorizontal="@dimen/d25"
        android:layout_marginTop="@dimen/d25"
        android:background="@drawable/custom_background_login"
        android:orientation="vertical"
        android:paddingVertical="@dimen/de10"
        android:weightSum="7">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_weight="2"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/violet_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSignUpUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/username"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_weight="2"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
            app:startIconTint="@color/violet_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/de10"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_weight="2"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
            app:startIconTint="@color/violet_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietReEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/de10"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_weight="2"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/violet_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/de10"
                android:hint="Nhập họ và tên"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_weight="2"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            app:startIconTint="@color/violet_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/de10"
                android:hint="Số điện thoại"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_weight="2"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/violet_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/de10"
                android:hint="Email"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_weight="0.5"
            android:background="@drawable/login_button_background"
            android:padding="@dimen/de10"
            android:textAllCaps="false"
            android:text="@string/sign_up_account"
            android:textColor="@color/white"
            android:textSize="@dimen/ts16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Bạn đã có tài khoản ?"
                android:layout_marginTop="@dimen/de10"
                android:layout_marginBottom="@dimen/d5"
                android:textSize="@dimen/ts16"
                android:gravity="right"
                />
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="@dimen/d5"
                android:textSize="@dimen/ts16"
                android:textColor="@color/violet_dark"
                android:layout_marginTop="@dimen/de10"
                android:text="@string/log_in" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/flProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="#80D5CFCF"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/d50"
            android:layout_height="@dimen/d50"
            android:layout_gravity="center" />
    </FrameLayout>
</RelativeLayout>