<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AddressUserFragment">

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/violet_dark"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/violet_dark"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/tvBillCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="8"
            android:gravity="center"
            android:text="Đặt hàng"
            android:textColor="@color/white"
            android:textSize="@dimen/ts20" />

        <ImageButton
            android:id="@+id/imb_cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/violet_dark"
            android:contentDescription="@string/none"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_cus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d50"
        android:layout_below="@id/llToolbar"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="10">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/d5"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="TODO"
            android:src="@drawable/ic_user" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/d5"
            android:layout_weight="4"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/customer_infor"
            android:lines="1"
            android:textColor="#8A8383"
            android:textColorHint="@color/colorLightGrey"
            android:textSize="@dimen/ts16" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/d5"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_calendar_month_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/d5"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:text="@string/none"
            android:textColor="@color/black"
            android:textSize="@dimen/ts16" />
    </LinearLayout>

    <View
        android:id="@+id/vSpace"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d5"
        android:layout_below="@id/layout_cus"
        android:background="@color/colorLightGray"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llBuyMore"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d50"
        android:layout_below="@id/vSpace"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_add_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_add"
            android:gravity="center_vertical"
            android:text="@string/add_new_address"
            android:textColor="@color/violet_dark"
            android:textSize="@dimen/ts18" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/white"
            android:src="@drawable/ic_qr_code"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/llBuyMore"
        android:background="@color/violet_dark" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelectedProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_login_1"
        android:padding="@dimen/de10" />
</RelativeLayout>